--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
                         <li><a name="/admin/user" class="am-cf iframeurl"><span class="am-icon-check"></span> 个人资料<span
                                 class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
                         <li><a href="admin-help.html"><span class="am-icon-puzzle-piece"></span> 帮助页</a></li>
-                        <li><a href="admin-gallery.html"><span class="am-icon-th"></span> 相册页面<span
+                        <li><a name="/admin/gallery/index" class="iframeurl"><span class="am-icon-th"></span> 相册页面<span
                                 class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
                         <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志</a></li>
                         <li><a name="/admin/category/list" class="iframeurl"><span class="am-icon-bug"></span> 分类</a></li>
