--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -94,7 +94,7 @@
                                     <div class="menu-messages-content">
                                         <div class="menu-messages-content-title">
                                             <i class="am-icon-circle-o am-text-warning"></i>
-                                            <span>禁言小张</span>
+                                            <span>JoJo</span>
                                         </div>
                                         <div class="am-text-truncate"> 为了能最准确的传达所描述的问题， 建议你在反馈时附上演示，方便我们理解。</div>
                                         <div class="menu-messages-content-time">2016-09-16 上午 09:23</div>
@@ -196,7 +196,7 @@
                 </div>
                 <span class="user-panel-logged-in-text">
               <i class="am-icon-circle-o am-text-success tpl-user-panel-status-icon"></i>
-              禁言小张
+              JoJo
           </span>
                 <a href="javascript:;" class="tpl-user-panel-action-link"> <span class="am-icon-pencil"></span> 账号设置</a>
             </div>
